<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <ListPreference
            android:defaultValue="true"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:key="language"
            android:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="dark_mode"
            android:title="@string/dark_mode_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_header">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="reset_caught"
            android:title="@string/reset_caught_title" />

    </PreferenceCategory>

</PreferenceScreen>
